@@ -117,7 +117,7 @@ public class AudienceNetworkBidderTest extends VertxTest {
         // then
         assertThat(result.getValue()).isEmpty();
         assertThat(result.getErrors()).hasSize(1);
-        assertThat(result.getErrors().get(0).getMessage()).startsWith("Cannot deserialize value of");
+        assertThat(result.getErrors().getFirst().getMessage()).startsWith("Cannot deserialize value of");
     }
 
     @Test
@@ -557,7 +557,8 @@ public class AudienceNetworkBidderTest extends VertxTest {
         // then
         assertThat(result.getValue()).isEmpty();
         assertThat(result.getErrors()).hasSize(1);
-        assertThat(result.getErrors().get(0).getMessage()).startsWith("Failed to decode: Unrecognized token 'invalid'");
+        assertThat(result.getErrors().getFirst().getMessage())
+                .startsWith("Failed to decode: Unrecognized token 'invalid'");
     }
 
     @Test
