@@ -185,7 +185,7 @@ public class RubiconBidderTest extends VertxTest {
         assertThat(result.getValue()).hasSize(1).element(0).isNotNull()
                 .returns(HttpMethod.POST, HttpRequest::getMethod)
                 .returns(ENDPOINT_URL, HttpRequest::getUri);
-        assertThat(result.getValue().get(0).getHeaders()).isNotNull()
+        assertThat(result.getValue().getFirst().getHeaders()).isNotNull()
                 .extracting(Map.Entry::getKey, Map.Entry::getValue)
                 .containsOnly(
                         tuple(HttpUtil.AUTHORIZATION_HEADER.toString(), "Basic dXNlcm5hbWU6cGFzc3dvcmQ="),
@@ -598,7 +598,7 @@ public class RubiconBidderTest extends VertxTest {
         final ObjectNode givenSkadn = mapper.createObjectNode();
         givenSkadn.put("property1", "value1");
         givenSkadn.put("property2", 2);
-        Optional.ofNullable(bidRequest.getImp().get(0))
+        Optional.ofNullable(bidRequest.getImp().getFirst())
                 .map(Imp::getExt)
                 .ifPresent(s -> s.set("skadn", givenSkadn));
 
@@ -1790,93 +1790,6 @@ public class RubiconBidderTest extends VertxTest {
     }
 
     @Test
-    public void makeHttpRequestsShouldUseUserBuyeruidIfPresent() {
-        // given
-        final BidRequest bidRequest = givenBidRequest(
-                builder -> builder.user(User.builder()
-                        .buyeruid("buyeruid")
-                        .ext(ExtUser.builder()
-                                .eids(singletonList(Eid.of(
-                                        "rubiconproject.com",
-                                        singletonList(Uid.of(
-                                                "extUserEidUidId",
-                                                null,
-                                                mapper.valueToTree(Map.of("stype", "ppuid"))
-                                        )),
-                                        null)))
-                                .build())
-                        .build()),
-                builder -> builder.video(Video.builder().build()), identity());
-
-        // when
-        final Result<List<HttpRequest<BidRequest>>> result = target.makeHttpRequests(bidRequest);
-
-        // then
-        assertThat(result.getValue())
-                .extracting(HttpRequest::getPayload)
-                .extracting(BidRequest::getUser)
-                .extracting(User::getBuyeruid)
-                .containsExactly("buyeruid");
-        assertThat(result.getErrors()).isEmpty();
-    }
-
-    @Test
-    public void makeHttpRequestsShouldUseUidIdIfUserBuyeruidAbsentAndSpecialEidSourceAndStypeIsPpuid() {
-        // given
-        final BidRequest bidRequest = givenBidRequest(
-                builder -> builder.user(User.builder()
-                        .eids(singletonList(Eid.of(
-                                "rubiconproject.com",
-                                singletonList(Uid.of(
-                                        "userEidUidId",
-                                        null,
-                                        mapper.valueToTree(Map.of("stype", "ppuid"))
-                                )),
-                                null)))
-                        .build()),
-                builder -> builder.video(Video.builder().build()), identity());
-
-        // when
-        final Result<List<HttpRequest<BidRequest>>> result = target.makeHttpRequests(bidRequest);
-
-        // then
-        assertThat(result.getValue())
-                .extracting(HttpRequest::getPayload)
-                .extracting(BidRequest::getUser)
-                .extracting(User::getBuyeruid)
-                .containsExactly("userEidUidId");
-        assertThat(result.getErrors()).isEmpty();
-    }
-
-    @Test
-    public void makeHttpRequestsShouldUseUidIdIfUserBuyeruidAbsentAndSpecialEidSourceAndStypeIsOther() {
-        // given
-        final BidRequest bidRequest = givenBidRequest(
-                builder -> builder.user(User.builder()
-                        .eids(singletonList(Eid.of(
-                                "rubiconproject.com",
-                                singletonList(Uid.of(
-                                        "userEidUidId",
-                                        null,
-                                        mapper.valueToTree(Map.of("stype", "other"))
-                                )),
-                                null)))
-                        .build()),
-                builder -> builder.video(Video.builder().build()), identity());
-
-        // when
-        final Result<List<HttpRequest<BidRequest>>> result = target.makeHttpRequests(bidRequest);
-
-        // then
-        assertThat(result.getValue())
-                .extracting(HttpRequest::getPayload)
-                .extracting(BidRequest::getUser)
-                .extracting(User::getBuyeruid)
-                .containsExactly("userEidUidId");
-        assertThat(result.getErrors()).isEmpty();
-    }
-
-    @Test
     public void makeHttpRequestsShouldUseGivenUserIdIfOtherExtUserFieldsPassed() {
         // given
         final ExtUser extUser = ExtUser.builder()
@@ -2380,7 +2293,7 @@ public class RubiconBidderTest extends VertxTest {
                 impBuilder -> impBuilder.video(Video.builder().build()),
                 identity());
 
-        bidRequest.getImp().get(0).getExt()
+        bidRequest.getImp().getFirst().getExt()
                 .set("data", mapper.createObjectNode()
                         .set("property2", mapper.createArrayNode().add("value2")));
 
@@ -2406,7 +2319,7 @@ public class RubiconBidderTest extends VertxTest {
         final BidRequest bidRequest = givenBidRequest(
                 identity(), impBuilder -> impBuilder.video(Video.builder().build()), identity());
 
-        bidRequest.getImp().get(0).getExt().set("gpid", TextNode.valueOf("gpidvalue"));
+        bidRequest.getImp().getFirst().getExt().set("gpid", TextNode.valueOf("gpidvalue"));
 
         // when
         final Result<List<HttpRequest<BidRequest>>> result = target.makeHttpRequests(bidRequest);
@@ -2474,8 +2387,7 @@ public class RubiconBidderTest extends VertxTest {
     }
 
     @Test
-    public void makeHttpRequestsShouldCopySiteExtDataFieldToRubiconImpExtRpTarget()
-            throws IOException {
+    public void makeHttpRequestsShouldCopySiteExtDataFieldToRubiconImpExtRpTarget() {
         // given
         final ObjectNode siteExtDataNode = mapper.createObjectNode()
                 .set("site", mapper.createArrayNode().add("value1"));
@@ -2488,7 +2400,7 @@ public class RubiconBidderTest extends VertxTest {
                 impBuilder -> impBuilder.video(Video.builder().build()),
                 identity());
 
-        final ObjectNode impExt = bidRequest.getImp().get(0).getExt();
+        final ObjectNode impExt = bidRequest.getImp().getFirst().getExt();
         impExt.set("context", mapper.valueToTree(ExtImpContext.of(impExtContextDataNode)));
 
         // when
@@ -2510,8 +2422,7 @@ public class RubiconBidderTest extends VertxTest {
     }
 
     @Test
-    public void makeHttpRequestsShouldCopyAppExtDataFieldToRubiconImpExtRpTarget()
-            throws IOException {
+    public void makeHttpRequestsShouldCopyAppExtDataFieldToRubiconImpExtRpTarget() {
         // given
         final ObjectNode appExtDataNode = mapper.createObjectNode()
                 .set("app", mapper.createArrayNode().add("value1"));
@@ -2550,7 +2461,7 @@ public class RubiconBidderTest extends VertxTest {
                 impBuilder -> impBuilder.video(Video.builder().build()),
                 identity());
 
-        final ObjectNode impExt = bidRequest.getImp().get(0).getExt();
+        final ObjectNode impExt = bidRequest.getImp().getFirst().getExt();
         impExt.set("data", mapper.createObjectNode()
                 .put("keywords", "imp,ext,data,keywords"));
         impExt.set(
@@ -2584,7 +2495,7 @@ public class RubiconBidderTest extends VertxTest {
                 impBuilder -> impBuilder.video(Video.builder().build()),
                 identity());
 
-        final ObjectNode impExt = bidRequest.getImp().get(0).getExt();
+        final ObjectNode impExt = bidRequest.getImp().getFirst().getExt();
         impExt.set("data", mapper.createObjectNode().put("search", "imp ext data search"));
 
         // when
@@ -2623,30 +2534,6 @@ public class RubiconBidderTest extends VertxTest {
     }
 
     @Test
-    public void makeHttpRequestsShouldMergeSiteSearchAndCopyToRubiconImpExtRpTarget()
-            throws JsonProcessingException {
-        // given
-        final BidRequest bidRequest = givenBidRequest(
-                requestBuilder -> requestBuilder.site(Site.builder().search("site search").build()),
-                impBuilder -> impBuilder.video(Video.builder().build()),
-                identity());
-
-        // when
-        final Result<List<HttpRequest<BidRequest>>> result = target.makeHttpRequests(bidRequest);
-
-        // then
-        assertThat(result.getErrors()).isEmpty();
-        assertThat(result.getValue())
-                .extracting(httpRequest -> mapper.readValue(httpRequest.getBody(), BidRequest.class))
-                .flatExtracting(BidRequest::getImp)
-                .extracting(Imp::getExt)
-                .extracting(objectNode -> mapper.convertValue(objectNode, RubiconImpExt.class))
-                .extracting(RubiconImpExt::getRp)
-                .extracting(RubiconImpExtRp::getTarget)
-                .containsOnly(mapper.readTree("{\"search\":[\"site search\"]}"));
-    }
-
-    @Test
     public void makeHttpRequestsShouldMergeSiteAttributesAndCopyToRubiconImpExtRpTarget() {
         // given
         final BidRequest bidRequest = givenBidRequest(
@@ -2673,16 +2560,7 @@ public class RubiconBidderTest extends VertxTest {
                 .extracting(RubiconImpExt::getRp)
                 .extracting(RubiconImpExtRp::getTarget)
                 .containsOnly(mapper.createObjectNode()
-                        .<ObjectNode>set("sectioncat", mapper.createArrayNode()
-                                .add("site sectioncat"))
-                        .<ObjectNode>set("pagecat", mapper.createArrayNode()
-                                .add("site pagecat"))
-                        .<ObjectNode>set("page", mapper.createArrayNode()
-                                .add("site page"))
-                        .<ObjectNode>set("ref", mapper.createArrayNode()
-                                .add("site ref"))
-                        .set("search", mapper.createArrayNode()
-                                .add("site search")));
+                        .<ObjectNode>set("page", mapper.createArrayNode().add("site page")));
     }
 
     @Test
@@ -2694,7 +2572,7 @@ public class RubiconBidderTest extends VertxTest {
         final ObjectNode dataNode = mapper.createObjectNode()
                 .set("pbadslot", TextNode.valueOf("pbadslotvalue"));
 
-        bidRequest.getImp().get(0).getExt().set("data", dataNode);
+        bidRequest.getImp().getFirst().getExt().set("data", dataNode);
 
         // when
         final Result<List<HttpRequest<BidRequest>>> result = target.makeHttpRequests(bidRequest);
@@ -2721,7 +2599,7 @@ public class RubiconBidderTest extends VertxTest {
                                 .put("adslot", "adslotvalue")
                                 .put("name", "gam"));
 
-        bidRequest.getImp().get(0).getExt().set("data", dataNode);
+        bidRequest.getImp().getFirst().getExt().set("data", dataNode);
 
         // when
         final Result<List<HttpRequest<BidRequest>>> result = target.makeHttpRequests(bidRequest);
@@ -2734,36 +2612,6 @@ public class RubiconBidderTest extends VertxTest {
                 .extracting(Imp::getExt)
                 .extracting(ext -> ext.at("/rp/target/dfp_ad_unit_code"))
                 .containsExactly(TextNode.valueOf("adslotvalue"));
-    }
-
-    @Test
-    public void makeHttpRequestsShouldMergeAppAttributesAndCopyToRubiconImpExtRpTarget() {
-        // given
-        final BidRequest bidRequest = givenBidRequest(
-                requestBuilder -> requestBuilder.app(App.builder()
-                        .sectioncat(singletonList("app sectioncat"))
-                        .pagecat(singletonList("app pagecat"))
-                        .build()),
-                impBuilder -> impBuilder.video(Video.builder().build()),
-                identity());
-
-        // when
-        final Result<List<HttpRequest<BidRequest>>> result = target.makeHttpRequests(bidRequest);
-
-        // then
-        assertThat(result.getErrors()).isEmpty();
-        assertThat(result.getValue())
-                .extracting(httpRequest -> mapper.readValue(httpRequest.getBody(), BidRequest.class))
-                .flatExtracting(BidRequest::getImp)
-                .extracting(Imp::getExt)
-                .extracting(objectNode -> mapper.convertValue(objectNode, RubiconImpExt.class))
-                .extracting(RubiconImpExt::getRp)
-                .extracting(RubiconImpExtRp::getTarget)
-                .containsOnly(mapper.createObjectNode()
-                        .<ObjectNode>set("sectioncat", mapper.createArrayNode()
-                                .add("app sectioncat"))
-                        .<ObjectNode>set("pagecat", mapper.createArrayNode()
-                                .add("app pagecat")));
     }
 
     @Test
@@ -2823,7 +2671,7 @@ public class RubiconBidderTest extends VertxTest {
 
         // then
         assertThat(result.getErrors()).hasSize(1);
-        assertThat(result.getErrors().get(0).getMessage()).startsWith("Cannot deserialize value");
+        assertThat(result.getErrors().getFirst().getMessage()).startsWith("Cannot deserialize value");
         assertThat(result.getValue()).hasSize(1);
     }
 
@@ -3432,8 +3280,8 @@ public class RubiconBidderTest extends VertxTest {
 
         // then
         assertThat(result.getErrors()).hasSize(1);
-        assertThat(result.getErrors().get(0).getMessage()).startsWith("Failed to decode: Unrecognized token");
-        assertThat(result.getErrors().get(0).getType()).isEqualTo(BidderError.Type.bad_server_response);
+        assertThat(result.getErrors().getFirst().getMessage()).startsWith("Failed to decode: Unrecognized token");
+        assertThat(result.getErrors().getFirst().getType()).isEqualTo(BidderError.Type.bad_server_response);
         assertThat(result.getValue()).isEmpty();
     }
 
